2.1.0/_sources/gallery/style_sheets/grayscale.rst.txt


.. _sphx_glr_gallery_style_sheets_grayscale.py:


=====================
Grayscale style sheet
=====================

This example demonstrates the "grayscale" style sheet, which changes all colors
that are defined as rc parameters to grayscale. Note, however, that not all
plot elements default to colors defined by an rc parameter.





.. image:: /gallery/style_sheets/images/sphx_glr_grayscale_001.png
    :align: center





.. code-block:: python

    import numpy as np
    import matplotlib.pyplot as plt

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    def color_cycle_example(ax):
        L = 6
        x = np.linspace(0, L)
        ncolors = len(plt.rcParams['axes.prop_cycle'])
        shift = np.linspace(0, L, ncolors, endpoint=False)
        for s in shift:
            ax.plot(x, np.sin(x + s), 'o-')


    def image_and_patch_example(ax):
        ax.imshow(np.random.random(size=(20, 20)), interpolation='none')
        c = plt.Circle((5, 5), radius=5, label='patch')
        ax.add_patch(c)


    plt.style.use('grayscale')

    fig, (ax1, ax2) = plt.subplots(ncols=2)
    fig.suptitle("'grayscale' style sheet")

    color_cycle_example(ax1)
    image_and_patch_example(ax2)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.106 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: grayscale.py <grayscale.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: grayscale.ipynb <grayscale.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
